pov-admin-tools (0.11) UNRELEASED; urgency=medium

  * Add update-notifier-common to Recommends.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 08 Apr 2015 11:06:07 +0300

pov-admin-tools (0.10.1) precise; urgency=medium

  * disk-inventory:
    - include fix for swap device recognition, dropped because I forgot to git
      pull before releasing.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 10 Oct 2014 10:57:51 +0300

pov-admin-tools (0.10) precise; urgency=low

  * machine-summary 0.5.1:
    - handle Xen virtual disk devices correctly
  * disk-inventory 1.1.6:
    - handle Xen virtual disk devices correctly
    - handle HP CCISS RAID devices correctly
  * Add atop and debsums to Recommends.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 10 Oct 2014 10:56:09 +0300

pov-admin-tools (0.9) precise; urgency=low

  * machine-summary 0.5:
    - make it work in Virtuozzo containers
  * Add pov-simple-backup to Recommends.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 15 Oct 2013 11:57:58 +0300

pov-admin-tools (0.8) precise; urgency=low

  * du-diff 0.2:
    - fix error when run without arguments
    - don't strip trailing spaces from file names
  * New script: check-changelog.
  * Add tig and htop to Recommends.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 27 Aug 2013 15:46:58 +0300

pov-admin-tools (0.7) precise; urgency=low

  * Add pov-server-page to Recommends.
  * New script: du-diff.
  * Manual pages for all the scripts

 -- Marius Gedminas <marius@gedmin.as>  Thu, 22 Aug 2013 10:12:21 +0300

pov-admin-tools (0.6.1) precise; urgency=low

  * Add python-nose to Build-Depends to fix build error.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 13 Aug 2013 15:25:25 +0300

pov-admin-tools (0.6) precise; urgency=low

  * machine-summary 0.4:
    - guesstimate memory size as a round number of gigabytes
    - drop .0 from integer sizes
  * Added 'make test' and some test cases for machine-summary.
  * Renamed machine-summary to machine_summary.py for easier development